--- a/uavros_simulation/uavros_gazebo/config/mavros_config/px4_config.yaml
+++ b/uavros_simulation/uavros_gazebo/config/mavros_config/px4_config.yaml
@@ -66,10 +66,10 @@ imu:
 
 # local_position
 local_position:
-  frame_id: "world"
+  frame_id: "map"
   tf:
-    send: true
-    frame_id: "world"
+    send: false
+    frame_id: "map"
     child_frame_id: "base_link"
     send_fcu: false
 
@@ -122,6 +122,8 @@ setpoint_velocity:
 # waypoint
 mission:
   pull_after_gcs: true  # update mission if gcs updates
+  use_mission_item_int: true # use the MISSION_ITEM_INT message instead of MISSION_ITEM
+                             # for uploading waypoints to FCU
 
 # --- mavros extras plugins (same order) ---
 
@@ -228,7 +230,7 @@ px4flow:
 vision_pose:
   tf:
     listen: false           # enable tf listener (disable topic subscribers)
-    frame_id: "map"
+    frame_id: "odom"
     child_frame_id: "vision_estimate"
     rate_limit: 10.0
 
@@ -249,12 +251,12 @@ wheel_odometry:
   wheel1: {x: 0.0, y:  0.15, radius: 0.05} # x-, y-offset (m,NED) and radius (m)
   send_raw: true              # send wheel's RPM and cumulative distance (~/wheel_odometry/rpm, ~/wheel_odometry/distance)
   send_twist: false           # send geometry_msgs/TwistWithCovarianceStamped instead of nav_msgs/Odometry
-  frame_id: "map"             # origin frame
+  frame_id: "odom"             # origin frame
   child_frame_id: "base_link" # body-fixed frame
   vel_error: 0.1              # wheel velocity measurement error 1-std (m/s)
   tf:
     send: false
-    frame_id: "map"
+    frame_id: "odom"
     child_frame_id: "base_link"
 
 # vim:set ts=2 sw=2 et:
