--- a/uavros_experiment/ARtagLanding/CMakeLists.txt
+++ b/uavros_experiment/ARtagLanding/CMakeLists.txt
@@ -1,1 +1,81 @@
-/opt/ros/melodic/share/catkin/cmake/toplevel.cmake
+cmake_minimum_required(VERSION 2.8.3)
+project(uavros_artaglanding)
+
+## Compile as C++11, supported in ROS Kinetic and newer
+ add_compile_options(-std=c++11)
+
+find_package(catkin REQUIRED COMPONENTS
+  message_generation  
+  roscpp
+  rospy
+  geometry_msgs
+  sensor_msgs
+  mavros
+  nav_msgs
+  std_msgs
+  std_srvs
+  tf2_ros
+  tf2_eigen
+  mavros_msgs
+  actionlib
+  trajectory_msgs
+  pluginlib
+)
+find_package(cmake_modules REQUIRED)
+find_package(Eigen3 REQUIRED)
+include_directories(${EIGEN3_INCLUDE_DIR})
+add_definitions(${EIGEN_DEFINITIONS})
+##add_dependencies(prometheus_msgs prometheus_msgs_gencpp)
+
+catkin_package(
+ INCLUDE_DIRS include
+#  LIBRARIES prometheus_msgs
+#  CATKIN_DEPENDS roscpp rospy tf
+#  DEPENDS system_lib
+)
+
+###########
+## Build ##
+###########
+
+## Specify additional locations of header files
+## Your package locations should be listed before other locations
+include_directories(
+  include
+  ${catkin_INCLUDE_DIRS}
+)
+
+
+add_executable(landing_control_p200_node src/landing_control_p200.cpp)
+
+
+## Specify libraries to link a library or executable target against
+
+
+target_link_libraries(landing_control_p200_node
+  ${catkin_LIBRARIES}
+)
+
+
+## Mark cpp header files for installation
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h"
+)
+## Mark executables and/or libraries for installation
+install(TARGETS  
+  landing_control_p200_node
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+install(PROGRAMS 
+   src/keyboard_control_px4.py 
+   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+install(DIRECTORY
+  launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
