--- a/uavros_simulation/uavros_gazebo/config/rover_config/ctrl.yaml
+++ b/uavros_simulation/uavros_gazebo/config/rover_config/ctrl.yaml
@@ -1,13 +1,34 @@
-#racecar: #spx: 不要用绝对路径！
+#rover: #spx: 不要用绝对路径！
   # Publish all joint states --公布所有--------------------
   joint_state_controller:
     type: joint_state_controller/JointStateController
     publish_rate: 50
   
   # Velocity Controllers ----速度控制器---------------------
+  left_front_wheel_velocity_controller:
+    type: effort_controllers/JointVelocityController
+    joint: front_left_wheel_joint
+    pid: {p: 500, i: 0.0, d: 0.0, i_clamp: 0.0}
+  right_front_wheel_velocity_controller:
+    type: effort_controllers/JointVelocityController
+    joint: front_right_wheel_joint
+    pid: {p: 500, i: 0.0, d: 0.0, i_clamp: 0.0}
+  left_rear_wheel_velocity_controller:
+    type: effort_controllers/JointVelocityController
+    joint: rear_left_wheel_joint
+    pid: {p: 500, i: 0.0, d: 0.0, i_clamp: 0.0}
+  right_rear_wheel_velocity_controller:
+    type: effort_controllers/JointVelocityController
+    joint: rear_right_wheel_joint
+    pid: {p: 500, i: 0.0, d: 0.0, i_clamp: 0.0}
 
   # Position Controllers ---位置控制器-----------------------
   left_steering_hinge_position_controller:
     joint: front_left_steering_joint
+    type: effort_controllers/JointPositionController
+    pid: {p: 1000.0, i: 0.0, d: 100}
+
+  right_steering_hinge_position_controller:
+    joint: front_right_steering_joint
     type: effort_controllers/JointPositionController
     pid: {p: 1000.0, i: 0.0, d: 100}
