fix some problem in uav controller

--- a/ste5_proto/CMakeLists.txt
+++ b/ste5_proto/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(GimbalMsgTest)
+project(ste5_proto)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 #add_compile_options(-std=c++11)
@@ -18,7 +18,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
     FILES
-    trackingState.msg
+    TrackState.msg
 
     )
 
