--- a/ste5_proto/package.xml
+++ b/ste5_proto/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>GimbalMsgTest</name>
+  <name>ste5_proto</name>
   <version>1.0.0</version>
   <description>nobody if fighting 2021</description>
 
